# Cross-View-Image-Based-Geolocalization

./: README.md
Image-Geolocalization Based on Image Retrieval/Model/: README.txt
Image-Geolocalization Based on Image Retrieval/Scripts/: ResNet.py  VGG.py  eval.py  input_data_CVACT.py  input_data_CVUSA.py  input_data_Ours.py  siamese.py  train.py
Image-Geolocalization Based on Image Retrieval/Utils/: data_preparation.py  plot_recall_curve.py
Image-Geolocalization Based on Image Retrieval/Visualize/: README.txt
Image-Geolocalization Based on Image Retrieval/logs/: README.txt
Panoramic Camera Pose Estimation/: CMakeLists.txt
Panoramic Camera Pose Estimation/src/: Test.cpp
